signup works now on FF, fields don't jump the side on mobile FF, action panel used for icon, icon doesn't show on mobile/tablet bc of positioning issue

--- a/_sass/_panels_modals.scss
+++ b/_sass/_panels_modals.scss
@@ -113,7 +113,7 @@
   form {
     margin: 25px 15px 0 15px;
     padding-bottom: 15px;
-    input {
+    input[type=text] {
       font-size: 22px;
       width: 100%;
       border: 2px solid $navy-blue-color;
