--- a/_sass/_signup.scss
+++ b/_sass/_signup.scss
@@ -1,12 +1,24 @@
+/** 
+ * Sign Up page
+ **/
 
 .sign-up{
 
+  .panel-icon > img {
+    @include tablet {
+      display: none;
+    }
+    @include phone {
+      display: none;
+    }
+  }
+
   form {
     text-align: center;
-    border: 2px $navy-blue-color solid;
+    //border: 2px $navy-blue-color solid;
     border-radius: 5px;
     float:none;
-    margin:25px auto;
+    margin:25px auto 0px;
 
     fieldset {
       border-radius: 5px;
@@ -23,10 +35,11 @@
       padding:0 20px;
     }
 
-    input {
+    input[type=text] {
       border: 2px $navy-blue-color solid;
       border-radius: 5px;
-      padding: 20px 10px;
+      //padding: 20px 10px;
+      height: 43px;
       font-size: 120%;
       font-weight: 300;
       text-align: left;
